--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,92 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500&display=swap');
+
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #FCE4DE;
+}
+
+.App {
+    font-family: 'Cabin', sans-serif;
+    height: 100%;
+    margin: 0; 
+}
+
+.main-body {
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+}
+
+.app-header {
+    text-align: center;
+    color: #3C55FF;
+    font-weight: 500;
+}
+
+.input-container {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.task-input,
+.edit-input {
+    flex: 1;
+    padding: 8px;
+    margin-right: 10px;
+}
+
+.form-btn {
+    padding: 8px 12px;
+    background-color: #E6F89C;
+    color: #3C55FF;
+    border: none;
+    cursor: pointer;
+}
+
+.form-btn:hover {
+    background-color: #3C55FF;
+    color: white;
+}
+
+.task-list {
+    list-style: none;
+    padding: 0;
+}
+
+.task-btn {
+    padding: 6px 10px;
+    margin: 3px 5px;
+    background-color: #E6F89C;
+    color: #3C55FF;
+    border: none;
+    cursor: pointer;
+}
+
+.task-btn:hover{
+    background-color: #3C55FF;
+    color: white;
+}
+
 .completed {
-    color: green;
     text-decoration: line-through;
-  }
+    color: #808080;
+}
   
   .not-completed {
-    color: black;
-    text-decoration: none;
+    color: #333;
+    text-decoration: none
+}
+
+.edit-input {
+    width: 80%;
+  }
+
+  #cancel-edit-btn {
+    background-color: #3C55FF;
+    color: white;
   }
